--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,7 +1,19 @@
 body {
-  background-color: green;
+
 }
 
 header {
   background-color: blue;
+}
+
+main {
+  background-color: #e6ffcc;
+}
+
+footer {
+  background-color: blue;
+}
+
+li {
+  
 }
