--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-
   <link rel="stylesheet" type="text/css" href="../css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="../css/clear.css">
   <link rel="stylesheet" type="text/css" href="../css/custom.css">
 
   <title>CryptoMarkets</title>
