--- a/views/index.erb
+++ b/views/index.erb
@@ -21,7 +21,7 @@
               </div>
               <div class="font-med align-right bold pad-top-20"><%= "#{coin.price_detail["PRICE"]}"%>
               </div>
-              <div class="font-small align-right pad-top-10">
+              <div class="font-small align-right pad-top-10 pad-right-20">
                 <div><%= "#{sprintf('%.2f', coin.price_detail_raw["CHANGEDAY"])}" %>
                 </div>
                 <div class="pad-top-10"><%= "#{sprintf('%.2f', coin.price_detail_raw["CHANGEPCTDAY"])}" %> %</div>
