fixed bug, added Crypto.refresh method so that every browser request refreshes the prices via new api call

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -11,6 +11,10 @@ main {
   font-size: 70px;
 }
 
+.row {
+  padding: 25px 20px;
+}
+
 .wrapper li.row {
   display: grid;
   grid-template-columns: 3fr 2fr 2fr;
