--- a/views/index.erb
+++ b/views/index.erb
@@ -9,10 +9,12 @@
   <title>CryptoMarkets</title>
 </head>
 <body>
-  <div class="container">
-    <header>header</header>
+  <div class="container arimo">
+    <header>
+      <div class="bold">coincoin</div>
+    </header>
     <main>
-      <div class="wrapper arimo">
+      <div class="wrapper">
         <ul>
           <% @data.each do |coin| %>
             <li class="row">
