--- a/views/index.erb
+++ b/views/index.erb
@@ -3,13 +3,13 @@
 <head>
   <link rel="stylesheet" type="text/css" href="../css/normalize.css">
   <link rel="stylesheet" type="text/css" href="../css/clear.css">
-  <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Arimo|Montserrat" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="../css/custom.css">
 
   <title>CryptoMarkets</title>
 </head>
 <body>
-  <div class="container arimo">
+  <div class="container montserrat">
     <header>
       <div class="bold">coincoin</div>
     </header>
