--- a/views/index.erb
+++ b/views/index.erb
@@ -7,7 +7,8 @@
   <link rel="stylesheet" type="text/css" href="../css/custom.css">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>CryptoMarkets</title>
+
+  <title>coincoin</title>
 </head>
 <body>
   <div class="container montserrat">
